# OpenGL-Tutorial

./: .gitignore  CMakeLists.txt  Tree.map
Implementation/: CMakeLists.txt  shadersbypath.cpp  shadersbysource.cpp
Include/: shaders.h
Scripts/: CMakeLists.txt
Scripts/Basics/: Rectangle.cpp  TwoTriangles.cpp
Scripts/Camera/: Camera.cpp  SimpleGame.cpp  camera.cpp
Scripts/Draw/: Colorful.cpp  Colors.cpp  Stars.cpp
Scripts/GET/: ffmpeg.cpp  points.cpp
Scripts/Lighting/: Light.cpp
Scripts/Projections/: Orthographic_Projection.cpp  Perspective_Projection.cpp
Scripts/Tetris/: Game.cpp
Scripts/Textures/: Mirror_repeat.cpp  Texture.cpp
Scripts/Transformations/: Movement.cpp
Shaders/Basics/: Rectangle.fs  Rectangle.vs
Shaders/Camera/: SimpleGame.fs  SimpleGame.vs  camera.fs  camera.vs
Shaders/Draw/: Colors.fs
Shaders/Lighting/: Light.fs  Light.vs
Shaders/Projections/: Orthographic_Projection.fs  Orthographic_Projection.vs  Perspective_Projection.fs
Shaders/Tetris/: Game.fs  Game.vs
Shaders/Textures/: Mirror_repeat.fs  Texture.vs
Shaders/Transformations/: Movement.fs  Movement.vs
exe/: exe.sh  opengl
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Colorful.cpp  Colors.cpp  FirstOpengl.cpp  Mirror_repeat.cpp  SecondOpengl.cpp  Stars.cpp  Texture.cpp  Transform.cpp  main.cpp
src/Headers/: shaders.h  shadersbypath.cpp  shadersbysource.cpp
src/Implementations/: shadersbypath.cpp  shadersbysource.cpp
src/Shaders/: Colors.vs  Projections.frag  Projections.vert  Transform.frag  Transform.vert  fragmentshader.fs  vertexshader.vs
src/projection/: Ortho_proj.cpp  Perspective_proj.cpp
